# study-web-app

./: .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/instructions/: backend-fastapi.instructions.md  backend-gin.instructions.md  backend-hono.instructions.md  backend-springboot.instructions.md  backend.instructions.md  frontend.instructions.md  infra.instructions.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/fastapi/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/fastapi/alembic/: env.py
backend/fastapi/alembic/versions/: 001_create_todos_table.py
backend/fastapi/app/: config.py  database.py  main.py  models.py  schemas.py
backend/fastapi/app/core/: config.py
backend/fastapi/app/crud/: __init__.py  todo.py
backend/fastapi/app/exceptions/: __init__.py
backend/fastapi/app/models/: __init__.py  models.py
backend/fastapi/app/routers/: todos.py
backend/fastapi/app/schemas/todo/: __init__.py  base.py  request.py  response.py
backend/fastapi/app/services/: __init__.py  todo.py
backend/fastapi/tests/: conftest.py
backend/fastapi/tests/crud/: test_todo.py
backend/fastapi/tests/routers/: test_todos.py
backend/fastapi/tests/services/: test_todo.py
backend/gin/: .dockerignore  .env.example  .gitignore  Dockerfile  go.mod  go.sum
backend/hono/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  (+2 more)
frontend/: jest.config.mjs  package-lock.json  package.json
infra/: README.md
(+75 files in other folders)
